feat: Update importmap and Vite config
Adds import maps to `index.html` for React and GenAI, and updates `vite.config.ts` to remove an unnecessary `base` setting.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             animation: pluck 0.2s ease-out;
         }
     </style>
+<script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.4",
